<?xml version="1.0" encoding="utf-8"?>

<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
  android:id="@+id/frameLayout4"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".NoAnswerFragment">

  <!-- TODO: Update blank fragment layout -->
  <TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/txt_back_to_question"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_conversion_absoluteHeight="731dp"
    tools:layout_conversion_absoluteWidth="411dp" />

  <Button
    android:id="@+id/btn_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="45dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="218dp"
    android:text="@string/bt_back_to_question"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.17"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <Button
    android:id="@+id/btn_end"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="37dp"
    android:layout_marginTop="100dp"
    android:text="@string/bt_finish"
    app:layout_constraintStart_toEndOf="@+id/btn_back"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
